--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
     "next": "14.1.4",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.3",
     "react": "^18",
     "react-dom": "^18"
   }
