--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
+    "chart.js": "^4.4.2",
     "next": "14.1.4",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   }
 }
