--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@iconscout/react-unicons": "^2.0.2",
     "@react-google-maps/api": "^2.19.3",
     "chart.js": "^4.4.2",
