--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@react-google-maps/api": "^2.19.3",
     "chart.js": "^4.4.2",
-    "next": "14.1.4",
+    "next": "^14.2.23",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.23.1",
+    "react-switch": "^7.1.0"
   }
 }
